--- a/src/styles/booksStyles.css
+++ b/src/styles/booksStyles.css
@@ -1,6 +1,4 @@
 .book-container {
-  border: solid black;
-
   margin: 0 6rem 0 6rem;
   display: flex;
   flex-direction: column;
@@ -9,32 +7,150 @@
 }
 
 .single-book {
-  margin: 0;
+  margin: 2rem 2rem 0 0;
   padding: 0;
-  border: solid blue;
+  border: solid 1px rgba(129, 127, 127, 0.322);
   display: flex;
   justify-content: space-between;
 }
 
 .book-info {
-  margin: 0;
+  width: 35%;
+  margin: 0 0 0 2rem;
   padding: 0;
 }
 
+.book-category {
+  margin: 1.5rem 0 0.5rem 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  color: rgba(129, 127, 127, 0.856);
+}
+
+.book-title {
+  font-family: "Roboto Slab", serif;
+  margin: 0;
+  font-size: 1.8rem;
+  letter-spacing: -0.2px;
+}
+
+.book-author {
+  margin-top: 0;
+  font-size: 0.875rem;
+  font-weight: 300;
+  color: #5d93c2a6;
+}
+
 .book-buttons {
+  margin: 1.2rem 0 1rem 0;
   display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
+}
+
+.single-book-button {
+  margin: 0.3rem 1.7rem 0 0;
+  padding: 0;
+  font-family: "Roboto Slab", serif;
+  background-color: transparent;
+  border: none;
+  color: #0763b37c;
+  font-size: 0.875rem;
+  font-weight: 300;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.single-book-button:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -1rem;
+  width: 1px;
+  height: 80%;
+  transform: translateY(-50%);
+  background-color: rgba(121, 114, 114, 0.219);
 }
 
 .completed {
   margin: 0;
   padding: 0;
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
+
+.completed::after {
+  margin: 0 0 0 6rem;
+  content: "";
+  height: 50%;
+  border-left: 1px solid rgba(199, 196, 196, 0.521);
+}
+
+.completed-data {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.completed img {
+  width: 6rem;
+  height: 6rem;
+}
+
+.percentage {
+  margin: 0;
+  padding: 0;
+  font-size: 2.5rem;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+}
+
+.completed-status {
+  margin: 0;
+  padding: 0;
+  color: rgba(129, 127, 127, 0.479);
+  font-size: 0.8rem;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
 }
 
 .current {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  margin: 0 2rem 0 0;
   padding: 0;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.current-title {
+  margin: 0;
+  font-family: "Roboto Slab", serif;
+  color: rgba(129, 127, 127, 0.534);
+  font-weight: 100;
+  font-size: 1rem;
+}
+
+.current-chapter {
+  margin: 0;
+  font-family: "Roboto Slab", serif;
+  color: rgba(14, 13, 13, 0.534);
+  font-weight: 100;
+  font-size: 1rem;
+}
+
+.current-button {
+  border: none;
+  background-color: #0290ff;
+  border-radius: 3px;
+  padding: 8px 24px;
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  color: #fff;
 }
 
 @media (max-width: 768px) {
@@ -44,18 +160,52 @@
 }
 
 .add-book {
-  border: solid black;
-  margin: 0 6rem 0 6rem;
+  margin: 4rem 6rem 4rem 6rem;
 }
 
-/* .add-book-items {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.add-book hr {
+  border-color: rgba(129, 127, 127, 0.158);
+  margin-right: 2rem;
+}
 
-} */
+.add-book h2 {
+  margin: 2rem 0 2rem 0;
+  color: rgba(129, 127, 127, 0.856);
+  font-family: Montserrat, sans-serif;
+}
+
+.add-book input,
+select {
+  padding: 12px;
+  border-radius: 4px;
+  border: 1px solid #e8e8e8;
+  background-color: #fff;
+  font-size: 1rem;
+  letter-spacing: -0.15px;
+  color: #121212;
+  width: 15rem;
+}
+
+input::placeholder {
+  color: rgba(167, 167, 172, 0.555);
+}
 
 .add-form {
   display: flex;
   justify-content: space-between;
+}
+
+.add-form button {
+  margin-right: 2rem;
+  cursor: pointer;
+  width: 20%;
+  padding: 12px;
+  border-radius: 3px;
+  background-color: #0290ff;
+  border: none;
+  letter-spacing: 0.5px;
+  color: #fff;
+  font-size: 0.813rem;
+  font-weight: 700;
+  font-family: "Roboto Slab", serif;
 }
